Added factory, modem and hardware version to "About phone" dialog
Change-Id: I0e59ea9426b6f5c78f05794b7972083df578cab8

Conflicts:

	res/values/strings.xml
	res/xml/device_info_settings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1213,6 +1213,9 @@
     <!-- About phone screen,  setting option name-->
     <string name="mod_version">Mod version</string>
     <string name="mod_version_default">Unknown</string>
+    <string name="modem_version">Modem version</string>
+    <string name="factory_version">Factory version</string>
+    <string name="hw_version">HW version</string>
 
     <!-- About phone screen, show when a value of some status item is unavailable. -->
     <string name="device_info_not_available">Not available</string>
